# market-intelligence-engine

./: .gitignore  LICENSE  README.md  buildspec.yml  docker-compose.yml  pyproject.toml  requirements.txt  seed.py
.github/workflows/: ci.yml
docker/: Dockerfile
docs/: ARCHITECTURE.md  SCORING.md
src/api/: main.py
src/collectors/: edgar.py  news_search.py  rss.py
src/extractor/: handler.py
src/models/: schema.py
src/scorer/: handler.py
src/shared/: config.py  entity.py
terraform/: main.tf  outputs.tf  variables.tf
terraform/modules/compute/: main.tf
terraform/modules/data/: main.tf
terraform/modules/events/: main.tf
terraform/modules/networking/: main.tf
